# secret-detector

./: .env.example  .gitignore  Cargo.toml  README.md  test_request.json
src/: main.rs
src/handlers/: a2a.rs
src/models/: a2a.rs  github.rs  mod.rs  scan.rs
src/services/: gemini.rs  github.rs  mod.rs  scanner.rs  state.rs
src/utils/: patterns.rs
