[package]
name = "secret-detector"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
env_logger = "0.11"
log = "0.4"
lazy_static = "1.4"
base64 = "0.22"

[dev-dependencies]
mockito = "1.2"